jellyfin/routes.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tunnel
  namespace: media
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: stream.axtazer.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
